# docpilot

./: .gitignore  LICENSE  README.md  chat.py  cli.py  embed.py  ingest.py  main.py  pyproject.toml  reviews.csv  reviews.tsv  scrape.py  store.py  vector.py
chroma_langchain_db/: chroma.sqlite3
chroma_langchain_db/fa068960-4135-4735-87c9-76ff0101670b/: index_metadata.pickle
testfiles/: reviews_numbered.tsv  rownumber.py  test.py  vector.py
