[project]
name = "docpilot"
version = "0.0.1"
description = "A local-first RAG pipeline CLI tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "beautifulsoup4>=4.12.0",
    "langchain>=0.2.0",
    "langchain-chroma>=0.1.0",
    "langchain-ollama>=0.1.0",
    "ollama>=0.2.0",
    "pandas>=2.0.0",
    "typer>=0.12.0",
    "httpx>=0.27.0",
    "tomli-w>=1.0.0",
    "pypdf>=5.0.0",
]

[project.scripts]
docpilot = "cli:app"

[tool.setuptools]
py-modules = ["cli", "chat", "vector", "scrape","store","embed"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"